# codeiq

./: .bestpractices.json  .coverage  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PROJECT_SUMMARY.md  README.md  SECURITY.md  dependency-check-suppressions.xml  docker-compose.yml  pom.xml  pyproject.toml  sonar-project.properties  spotbugs-exclude.xml
.github/: dependabot.yml
.github/workflows/: beta-java.yml  beta.yml  ci-java.yml  publish.yml  release-java.yml  sbom.yml  scorecard.yml  security.yml  sonarcloud-java.yml  sonarcloud.yml
docs/: benchmark-results.md  codeiq.yml.example  migration-guide.md
docs/audits/: 2026-04-28-serve-path-prod-readiness-counter.md  2026-04-28-serve-path-prod-readiness.md
docs/plans/: 2026-03-28-explorer-ui-plan.md
docs/project/: architecture.md  build-and-run.md  conventions.md  data-model.md  flows.md  ui.md
docs/specs/: 2026-03-28-analyzer-performance-design.md  2026-03-28-explorer-ui-design.md  2026-03-28-layer-auth-frontend-plan.md  2026-03-29-antlr-migration-design.md  2026-03-29-detector-architecture-design.md  2026-03-29-memory-optimization-design.md  2026-03-29-pipeline-configuration-design.md  2026-03-29-service-topology-design.md  2026-04-27-resolver-spi-and-java-pilot-design.md
docs/superpowers/specs/: 2026-03-27-structured-data-detectors-design.md
helm/code-iq/: Chart.yaml  values.yaml
helm/code-iq/templates/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
scripts/: setup-git-signed.sh
scripts/baseline/: consolidate.sh  run-depcheck.sh  run-maven-tests.sh  run-pipeline.sh
shared/runbooks/: engineering-standards.md  first-time-setup.md  release.md  rollback.md
src/assembly/: source-bundle.xml
src/code_intelligence/: analyzer.py  cli.py  config.py
src/code_intelligence/cache/: store.py
src/code_intelligence/classifiers/: layer_classifier.py
src/code_intelligence/detectors/: registry.py
src/code_intelligence/discovery/: file_discovery.py
src/code_intelligence/flow/: engine.py  renderer.py
src/code_intelligence/graph/: builder.py  store.py
src/code_intelligence/models/: graph.py
src/code_intelligence/server/: __init__.py  app.py  mcp_server.py  middleware.py  routes.py  service.py
src/main/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.ts
src/main/resources/: application.yml  logback-spring.xml
src/osscodeiq/: analyzer.py  cli.py  config.py
src/osscodeiq/cache/: hasher.py  store.py
src/osscodeiq/classifiers/: layer_classifier.py
src/osscodeiq/detectors/: base.py  registry.py  utils.py
src/osscodeiq/discovery/: __init__.py  change_detector.py  file_discovery.py
src/osscodeiq/flow/: engine.py  models.py  renderer.py  views.py
src/osscodeiq/graph/: backend.py  builder.py  query.py  store.py  views.py
src/osscodeiq/models/: __init__.py  graph.py
src/osscodeiq/output/: dot.py  mermaid.py  safety.py  serializers.py
src/osscodeiq/parsing/: __init__.py  parser_manager.py
src/osscodeiq/server/: __init__.py  app.py  mcp_server.py  middleware.py  routes.py  service.py
src/test/resources/: application-test.yml
tests/: conftest.py  test_edge_cases.py  test_graph_edge_cases.py  test_thread_safety.py
tests/classifiers/: test_layer_classifier.py
tests/detectors/auth/: test_certificate_auth.py  test_ldap_auth.py  test_session_header_auth.py
tests/detectors/config/: test_cloudformation.py  test_docker_compose.py  test_github_actions.py  test_gitlab_ci.py  test_helm_chart.py  test_json_structure.py  (+3 more)
tests/flow/: test_engine.py  test_flow_edge_cases.py  test_models.py  test_renderer.py  test_views.py
tests/server/: test_service.py  test_ui_components.py  test_ui_explorer.py  test_ui_init.py  test_ui_mcp_console.py  test_ui_theme.py
tests/test_detectors/: test_cpp_detectors.py  test_csharp_detectors.py  test_generic_detectors.py  test_go_detectors.py  test_iac_detectors.py  test_java_detectors.py  test_python_detectors.py  test_shell_detectors.py  test_terraform_detectors.py  test_typescript_detectors.py
tests/test_graph/: test_builder.py  test_models.py  test_query.py  test_store.py  test_views.py
tests/test_output/: test_dot.py  test_mermaid.py  test_safety.py  test_serializers.py
(+1025 files in other folders)
