[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osscodeiq"
version = "0.0.0"
description = "CLI tool for intelligent code graph discovery and analysis"
readme = "README.md"
license = {text = "MIT"}
keywords = ["code-analysis", "graph", "detectors", "architecture", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/RandomCodeSpace/code-iq"
Documentation = "https://github.com/RandomCodeSpace/code-iq#readme"
Repository = "https://github.com/RandomCodeSpace/code-iq"
Issues = "https://github.com/RandomCodeSpace/code-iq/issues"
Changelog = "https://github.com/RandomCodeSpace/code-iq/releases"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "networkx>=3.2",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "sqlparse>=0.5",
    "pydantic>=2.0",
    "pathspec>=0.11",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
kuzu = ["kuzu>=0.6"]
all-backends = ["kuzu>=0.6"]

[project.scripts]
osscodeiq = "osscodeiq.cli:app"

[project.entry-points."osscodeiq.detectors"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
osscodeiq = ["flow/templates/*.html", "flow/vendor/*.js", "server/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
